--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,115 +1,114 @@
 name: CI
 
 on:
-  push:
-    branches: [main, develop]
-  pull_request:
-    branches: [main]
-  workflow_dispatch:
+    push:
+        branches: [master, main, develop]
+    pull_request:
+        branches: [master, main]
+    workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - ros_distro: humble
-            os: ubuntu-22.04
-          - ros_distro: jazzy
-            os: ubuntu-24.04
+    build:
+        runs-on: ubuntu-latest
+        strategy:
+            fail-fast: false
+            matrix:
+                include:
+                    - ros_distro: humble
+                      os: ubuntu-22.04
+                    - ros_distro: jazzy
+                      os: ubuntu-24.04
 
-    container:
-      image: ros:${{ matrix.ros_distro }}-ros-base
+        container:
+            image: ros:${{ matrix.ros_distro }}-ros-base
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
 
-      - name: Install dependencies
-        run: |
-          apt-get update
-          apt-get install -y wget
+            - name: Install dependencies
+              run: |
+                  apt-get update
+                  apt-get install -y wget
 
-          # Install wujihandcpp SDK
-          wget -q https://github.com/Wuji-Technology-Co-Ltd/wujihandpy/releases/download/v1.3.0/wujihandcpp-1.3.0-amd64.deb
-          dpkg -i --force-overwrite wujihandcpp-1.3.0-amd64.deb || true
-          apt-get install -f -y
+                  # Install wujihandcpp SDK
+                  wget -q https://github.com/Wuji-Technology-Co-Ltd/wujihandpy/releases/download/v1.3.0/wujihandcpp-1.3.0-amd64.deb
+                  dpkg -i --force-overwrite wujihandcpp-1.3.0-amd64.deb || true
+                  apt-get install -f -y
 
-          # Install ROS dependencies
-          apt-get install -y \
-            ros-${{ matrix.ros_distro }}-sensor-msgs \
-            ros-${{ matrix.ros_distro }}-std-msgs \
-            ros-${{ matrix.ros_distro }}-robot-state-publisher \
-            ros-${{ matrix.ros_distro }}-rviz2 \
-            ros-${{ matrix.ros_distro }}-xacro
+                  # Install ROS dependencies
+                  apt-get install -y \
+                    ros-${{ matrix.ros_distro }}-sensor-msgs \
+                    ros-${{ matrix.ros_distro }}-std-msgs \
+                    ros-${{ matrix.ros_distro }}-robot-state-publisher \
+                    ros-${{ matrix.ros_distro }}-xacro
 
-      - name: Build
-        run: |
-          source /opt/ros/${{ matrix.ros_distro }}/setup.bash
-          colcon build --symlink-install
-        shell: bash
+            - name: Build
+              run: |
+                  source /opt/ros/${{ matrix.ros_distro }}/setup.bash
+                  colcon build --symlink-install
+              shell: bash
 
-      - name: Test
-        run: |
-          source /opt/ros/${{ matrix.ros_distro }}/setup.bash
-          source install/setup.bash
-          colcon test
-          colcon test-result --verbose
-        shell: bash
-        continue-on-error: true
+            - name: Test
+              run: |
+                  source /opt/ros/${{ matrix.ros_distro }}/setup.bash
+                  source install/setup.bash
+                  colcon test
+                  colcon test-result --verbose
+              shell: bash
+              continue-on-error: true
 
-  build-deb:
-    runs-on: ubuntu-24.04
-    needs: build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    build-deb:
+        runs-on: ubuntu-24.04
+        needs: build
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
 
-      - name: Setup ROS 2
-        uses: ros-tooling/setup-ros@v0.7
-        with:
-          required-ros-distributions: jazzy
+            - name: Setup ROS 2
+              uses: ros-tooling/setup-ros@v0.7
+              with:
+                  required-ros-distributions: jazzy
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y wget dpkg-dev
+            - name: Install dependencies
+              run: |
+                  sudo apt-get update
+                  sudo apt-get install -y wget dpkg-dev
 
-          # Install wujihandcpp SDK
-          wget -q https://github.com/Wuji-Technology-Co-Ltd/wujihandpy/releases/download/v1.3.0/wujihandcpp-1.3.0-amd64.deb
-          sudo dpkg -i --force-overwrite wujihandcpp-1.3.0-amd64.deb || true
-          sudo apt-get install -f -y
+                  # Install wujihandcpp SDK
+                  wget -q https://github.com/Wuji-Technology-Co-Ltd/wujihandpy/releases/download/v1.3.0/wujihandcpp-1.3.0-amd64.deb
+                  sudo dpkg -i --force-overwrite wujihandcpp-1.3.0-amd64.deb || true
+                  sudo apt-get install -f -y
 
-          # Install ROS dependencies
-          sudo apt-get install -y \
-            ros-jazzy-sensor-msgs \
-            ros-jazzy-std-msgs \
-            ros-jazzy-robot-state-publisher
+                  # Install ROS dependencies
+                  sudo apt-get install -y \
+                    ros-jazzy-sensor-msgs \
+                    ros-jazzy-std-msgs \
+                    ros-jazzy-robot-state-publisher
 
-      - name: Build deb package
-        run: |
-          chmod +x build_deb.sh
-          ./build_deb.sh jazzy
+            - name: Build deb package
+              run: |
+                  chmod +x build_deb.sh
+                  ./build_deb.sh jazzy
 
-      - name: Upload deb artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ros-jazzy-wujihand-deb
-          path: ../ros-jazzy-wujihand_*.deb
-          retention-days: 30
+            - name: Upload deb artifact
+              uses: actions/upload-artifact@v4
+              with:
+                  name: ros-jazzy-wujihand-deb
+                  path: ../ros-jazzy-wujihand_*.deb
+                  retention-days: 30
 
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+    lint:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
 
-      - name: Install clang-format
-        run: sudo apt-get update && sudo apt-get install -y clang-format
+            - name: Install clang-format
+              run: sudo apt-get update && sudo apt-get install -y clang-format
 
-      - name: Check C++ formatting
-        run: |
-          find . -name "*.cpp" -o -name "*.hpp" | head -20 | xargs clang-format --dry-run --Werror || echo "Format check completed"
+            - name: Check C++ formatting
+              run: |
+                  find . -name "*.cpp" -o -name "*.hpp" | head -20 | xargs clang-format --dry-run --Werror || echo "Format check completed"
