--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,8 +101,8 @@ jobs:
             - name: Upload deb artifact
               uses: actions/upload-artifact@v4
               with:
-                  name: ros-${{ matrix.ros_distro }}-wujihand-ros2-deb
-                  path: ros-${{ matrix.ros_distro }}-wujihand-ros2_*.deb
+                  name: ros-${{ matrix.ros_distro }}-wujihand-deb
+                  path: ros-${{ matrix.ros_distro }}-wujihand_*.deb
                   retention-days: 30
 
     lint:
