--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,8 +52,8 @@ jobs:
             - name: Upload artifact
               uses: actions/upload-artifact@v4
               with:
-                  name: ros-${{ matrix.ros_distro }}-wujihand-ros2-deb
-                  path: ros-${{ matrix.ros_distro }}-wujihand-ros2_*.deb
+                  name: ros-${{ matrix.ros_distro }}-wujihand-deb
+                  path: ros-${{ matrix.ros_distro }}-wujihand_*.deb
 
     release:
         needs: build-debs
