feat(multi-hand): add multi-hand namespace support with XACRO
- Add parameterized XACRO with prefix and hand_type support
- Delete obsolete left-ros.urdf and right-ros.urdf files
- Create common.py for shared launch utilities
- Add joint_prefix parameter to driver node
- Update all launch files to support multi-hand configuration
- Update RViz config for prefixed TF frames
- Update documentation with multi-hand usage examples

Resolve f-6544924792

--- a/wujihand_bringup/package.xml
+++ b/wujihand_bringup/package.xml
@@ -15,6 +15,7 @@
   <exec_depend>wujihand_driver</exec_depend>
   <exec_depend>wujihand_description</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>xacro</exec_depend>
   <exec_depend>rviz2</exec_depend>
   <exec_depend>launch</exec_depend>
   <exec_depend>launch_ros</exec_depend>
